APOLLO, FIX, STYLING - Fixed acousticness and valence tooltips being cut off

--- a/apollo.css
+++ b/apollo.css
@@ -138,7 +138,6 @@
 {
 	background: #dadada;
 	border-radius: 5px;
-	overflow: hidden;
 	margin-top: 10px;
 }
 .graph-cont
